refactor. extract functons, add comments, remove redundancies